chart/templates/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: canopy-backend
spec:
  ports:
    - port: 8000
      targetPort: 8000
  selector:
    app: canopy-backend
