chart/templates/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: canopy-backend
spec:
  to:
    kind: Service
    name: canopy-backend
  port:
    targetPort: 8000
  tls:
    termination: edge
